Ajout du vrai Twitch Client ID

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <script>
     // === CONFIG & OAuth ===
-    const CLIENT_ID    = 'TON_CLIENT_ID';  // ← remplace par ton Client ID
+    const CLIENT_ID    = 'trn5ak33y0crkdry0jza9h31vxdgp4';  // ← remplace par ton Client ID
     const REDIRECT_URI = location.origin + location.pathname;
     const SCOPES       = 'user:read:email'; // pas de scope follow count nécessaire
 
